--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
   },
   "homepage": "https://github.com/vdegenne/example-gulp#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "bower": "^1.8.0",
     "del": "^2.2.2",
-    "gulp": "^3.9.1"
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4"
   }
 }
